deploymentWeb1.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mojeappka-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: mojeappka
    spec:
      containers:
      - name: mojeappka
        image: tomasacr.azurecr.io/mojeappka:1
        ports:
        - containerPort: 3000
      nodeSelector:
        agentpool: nodepool1
