podACIWin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iis-aci
  namespace: default
spec:
  containers:
  - name: iis-aci
    image: microsoft/iis:nanoserver
    ports:
    - containerPort: 80
  nodeName: virtual-kubelet-myaciconnector-win
