serviceWeb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mojeappka-service
spec:
  selector:
    app: mojeappka
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
