ingressWebLego.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: 'true'
  name: mojeappka-ingress
spec:
  rules:
    - host: app.azure.tomaskubica.cz
      http:
        paths:
          - path: /
            backend:
              serviceName: mojeappka-service
              servicePort: 80
  tls:
      - hosts:
          - app.azure.tomaskubica.cz
        secretName: mycert
